<resources>
    <string name="app_name">日历</string>
    <string name="hint_agenda_title">标题</string>
    <string name="hint_agenda_description">描述</string>
    <string name="start_time">开始</string>
    <string name="end_time">结束</string>
    <string name="event_add">添加事件</string>
    <string name="event_update">更新事件</string>
    
    <string name="choice_none">反选</string>
    <string name="choice_all">全选</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="OK">确认</string>
    <string name="Cancel">取消</string>

    <string name="calendar_disable_hint">日历权限被禁用，请开启</string>
</resources>
