<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:spinner="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FCFCFC"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/app_name"
            android:textSize="21sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="3px"
            android:background="#E2E2E2" />

        <EditText
            android:id="@+id/et_agenda_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FCFCFC"
            android:hint="@string/hint_agenda_title"
            android:paddingLeft="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#E2E2E2" />

        <EditText
            android:id="@+id/et_agenda_description"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FCFCFC"
            android:hint="@string/hint_agenda_description"
            android:paddingLeft="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#E2E2E2" />

        <LinearLayout
            android:id="@+id/ll_start_time"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FCFCFC"
            android:orientation="horizontal"
            android:paddingLeft="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/start_time"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_start_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_or_padding"
                android:gravity="center_vertical" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#E2E2E2" />

        <LinearLayout
            android:id="@+id/ll_end_time"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FCFCFC"
            android:orientation="horizontal"
            android:paddingLeft="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/end_time"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_end_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_or_padding"
                android:gravity="center_vertical" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#E2E2E2" />

        <com.example.myapplication.spinner.NiceSpinner
            android:id="@+id/spin_agenda_remind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/button_normal"
            spinner:textTint="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#E2E2E2" />

        <!-- <Spinner -->
        <!-- android:id="@+id/spin_agenda_repeat" -->
        <!-- android:layout_width="match_parent" -->
        <!-- android:layout_height="50dp" -->
        <!-- android:entries="@array/agenda_repeat_string" -->
        <!-- android:paddingLeft="10dp" /> -->

        <com.example.myapplication.spinner.NiceSpinner
            android:id="@+id/spin_agenda_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/button_normal"
            spinner:textTint="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#E2E2E2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_heigh"
            android:background="#FCFCFC"
            android:orientation="horizontal"
            android:padding="5dp" >
            
            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>