<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
		android:background="#2196F3"
        android:id="@+id/head_title" >

		<LinearLayout
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true">

            <ImageView
                android:layout_width="10dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:scaleType="fitXY"
                android:background="@drawable/btn_bg_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text=" 返回"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:text="2016-04-26" />
        
        <TextView
            android:id="@+id/today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:layout_centerVertical="true"
            android:text="重置"
            android:layout_toLeftOf="@+id/list"
            android:layout_marginRight="15dp" />


        <TextView
            android:id="@+id/list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/create"
            android:text="全部"
            android:textColor="#ffffff"
            android:textSize="15sp" />
        
        
        
        <TextView
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:text="+"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"/>
    </RelativeLayout>
	
    <RelativeLayout
        android:id="@+id/rl_multi_choice"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_heigh"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:layout_below="@+id/head_title">
        
        <Button 
            android:id="@+id/btn_multi_choice_cancel"
            android:layout_width="@dimen/button_width"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:background="@drawable/selector_button" />
        
        <TextView 
            android:id="@+id/tv_multi_choice_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center" />
        
        <Button 
            android:id="@+id/btn_multi_choice"
            android:layout_width="@dimen/button_width"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:text="@string/choice_all"
            android:textColor="@android:color/white"
            android:background="@drawable/selector_button" />
    </RelativeLayout>
    
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_multi_choice"
        android:layout_above="@+id/btn_delete_event" >
	    <ListView
	        android:id="@+id/listview"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
	    <TextView 
            android:id="@+id/no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:text="没有日程"/>
    </FrameLayout>

    <Button
        android:id="@+id/btn_delete_event"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_heigh"
        android:layout_alignParentBottom="true"
        android:text="@string/delete"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:background="@drawable/selector_button" />

</RelativeLayout>
