<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:spinner="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_14"
                android:layout_marginRight="@dimen/dp_14">


                <TextView
                    android:id="@+id/iv_coin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_11"
                    android:text="目标名称"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <EditText
                    android:id="@+id/et_editText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:layout_marginTop="@dimen/dp_12"
                    android:background="@drawable/bg_create_searh_et_gray"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:hint="跑步· 打开音乐让血液沸腾起来"
                    android:imeOptions="actionSearch"
                    android:paddingLeft="10dp"
                    android:paddingRight="@dimen/dp_10"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:textColorHint="#BDBDBD"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_coin" />


                <TextView
                    android:id="@+id/iv_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_11"
                    android:text="目标描述"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_editText" />


                <EditText
                    android:id="@+id/et_agenda_description"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:layout_marginTop="@dimen/dp_12"
                    android:background="@drawable/bg_create_searh_et_gray"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:hint="跑步· 打开音乐让血液沸腾起来"
                    android:imeOptions="actionSearch"
                    android:paddingLeft="10dp"
                    android:paddingRight="@dimen/dp_10"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:textColorHint="#BDBDBD"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_des" />

                <RelativeLayout
                    android:id="@+id/rl_punch_card"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_55"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_agenda_description">


                    <TextView
                        android:id="@+id/tv_punch_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="@dimen/dp_30"
                        android:drawableLeft="@mipmap/ic_punch_card_count"
                        android:drawablePadding="@dimen/dp_4"
                        android:text="打卡频次"
                        android:textColor="#333333"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_punch_card_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:drawableRight="@mipmap/ic_to_right_b"
                        android:gravity="center_vertical"
                        android:maxWidth="@dimen/dp_200"
                        android:layout_centerVertical="true"
                        android:text="每天"
                        android:textColor="#666666"
                        android:textSize="@dimen/sp_16" />

                    <View
                        android:id="@+id/v_line_one"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="@dimen/dp_16"
                        android:background="#EEEEEE" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_keep_day"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_55"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rl_punch_card">


                    <TextView
                        android:id="@+id/tv_keep_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="@dimen/dp_30"
                        android:drawableLeft="@mipmap/ic_keep_count"
                        android:drawablePadding="@dimen/dp_4"
                        android:text="坚持天数"
                        android:textColor="#333333"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_keep_day_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:drawableRight="@mipmap/ic_to_right_b"
                        android:gravity="center_vertical"
                        android:text="00天"
                        android:textColor="#666666"
                        android:textSize="@dimen/sp_16" />

                    <View
                        android:id="@+id/v_line_two"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="@dimen/dp_16"
                        android:background="#EEEEEE" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rl_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_55"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rl_keep_day">


                    <TextView
                        android:id="@+id/tv_start_time2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="@dimen/dp_30"
                        android:drawableLeft="@mipmap/ic_keep_count"
                        android:drawablePadding="@dimen/dp_4"
                        android:text="开始时间"
                        android:textColor="#333333"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_start_time_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:drawableRight="@mipmap/ic_to_right_b"
                        android:gravity="center_vertical"
                        android:text="0000/00/00"
                        android:textColor="#666666"
                        android:textSize="@dimen/sp_16" />

                    <View
                        android:id="@+id/v_line_three"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="@dimen/dp_16"
                        android:background="#EEEEEE" />
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rl_alarm_hint"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_55"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rl_start_time">


                    <TextView
                        android:id="@+id/tv_alarm_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="@dimen/dp_30"
                        android:drawableLeft="@mipmap/ic_keep_count"
                        android:drawablePadding="@dimen/dp_4"
                        android:text="时间提醒"
                        android:textColor="#333333"
                        android:textSize="@dimen/sp_16"
                        android:textStyle="bold" />


                    <com.example.myapplication.librarycalendar.utils.SwitchButton
                        android:id="@+id/sb_switchButton"
                        android:layout_width="@dimen/dp_40"
                        android:layout_height="@dimen/dp_22"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/dp_15"
                        app:layout_constraintBottom_toBottomOf="@id/tv_alarm_hint"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_alarm_hint"
                        app:sb_background="#D8D8D8"
                        app:sb_checked_color="#FFD200"
                        app:sb_show_indicator="false"
                        app:sb_uncheck_color="@color/white" />

                </RelativeLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rl_alarm_hint" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FCFCFC"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/app_name"
                android:textSize="21sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="3px"
                android:background="#E2E2E2" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#E2E2E2" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#E2E2E2" />

            <LinearLayout
                android:id="@+id/ll_start_time"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#FCFCFC"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/start_time"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_or_padding"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#E2E2E2" />

            <LinearLayout
                android:id="@+id/ll_end_time"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#FCFCFC"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/end_time"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_or_padding"
                    android:gravity="center_vertical" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#E2E2E2" />

            <com.example.myapplication.spinner.NiceSpinner
                android:id="@+id/spin_agenda_remind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:background="@color/button_normal"
                spinner:textTint="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#E2E2E2" />


            <com.example.myapplication.spinner.NiceSpinner
                android:id="@+id/spin_agenda_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:background="@color/button_normal"
                spinner:textTint="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#E2E2E2" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_heigh"
                android:background="#FCFCFC"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_button"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_button"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@android:color/white" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</ScrollView>